Added Navbar, Changed Contact

--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogeger</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/utils.css">  
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="navlogo">
+            <img src="favicon.png" alt="logo">
+        </div>
+        <div class="navlinks">
+            <a href="/" class="navs active">Home</a>
+            <a href="/blogs.html" class="navs">Blogs</a>
+            <a href="/contact.html" class="navs">Contact</a>
+        </div>
+    </div>
+
+    <div class="main-blog">
+
+    </div>
+    <div class="other-blogs">
+
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
 </html>
