--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="navbar">
         <div class="navlogo">
-            <img src="favicon.png" alt="logo">
+            <img src="blog.png" alt="logo">
+            <h1>Blogegar</h1>
         </div>
         <div class="navlinks">
             <a href="/" class="navs active">Home</a>
