--- a/index.html
+++ b/index.html
@@ -3,29 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogegar</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/utils.css">  
 </head>
 <body>
     <div class="navbar">
         <div class="navlogo">
-            <img src="blog.png" alt="logo">
+            <img src="favicon.png" alt="logo">
             <h1>Blogegar</h1>
         </div>
         <div class="navlinks">
             <a href="/" class="navs active">Home</a>
-            <a href="/blogs.html" class="navs">Blogs</a>
-            <a href="/contact.html" class="navs">Contact</a>
+            <a id="none" href="/blogs.html" class="navs">Blogs</a>
+            <a id="none" href="/contact.html" class="navs">Contact</a>
         </div>
     </div>
-
+<!-- for pc -->
+    <div class="container">
+        <div class="image-container">
+          <img class="image-c" src="favicon.png" alt="Example Image">
+        </div>
+        <div class="text-container">
+          <h1>This is title of blog</h1>
+          <p style="color: grey;">by Admin</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ab dolore impedit deleniti nam illo, optio explicabo perferendis, obcaecati, reiciendis consequuntur. Ex ullam voluptates quibusdam aliquam voluptas reprehenderit placeat? Maiores.</p>
+          <br>
+          <button>Read Now</button>
+        </div>
+      </div>
+<br>
+      <div class="container">
+        <div class="image-container">
+          <img class="image-c" src="favicon.png" alt="Example Image">
+        </div>
+        <div class="text-container">
+          <h1>This is title of blog</h1>
+          <p style="color: grey;">by Admin</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ab dolore impedit deleniti nam illo, optio explicabo perferendis, obcaecati, reiciendis consequuntur. Ex ullam voluptates quibusdam aliquam voluptas reprehenderit placeat? Maiores.</p>
+          <br>
+          <button>Read Now</button>
+        </div>
+      </div>
+      <br>
+      <div class="container">
+        <div class="image-container">
+          <img class="image-c" src="favicon.png" alt="Example Image">
+        </div>
+        <div class="text-container">
+          <h1>This is title of blog</h1>
+          <p style="color: grey;">by Admin</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ab dolore impedit deleniti nam illo, optio explicabo perferendis, obcaecati, reiciendis consequuntur. Ex ullam voluptates quibusdam aliquam voluptas reprehenderit placeat? Maiores.</p>
+          <br>
+          <button>Read Now</button>
+        </div>
+      </div>
+<!-- for tab/mobile -->
     <div class="main-blog">
-
+        <img class="main-img" src="favicon.png" alt="">
+        <h1 class="main-h1">This is title of blog</h1>
+        <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint impedit culpa tempora enim earum veniam placeat voluptatem asperiores qui, ipsam corrupti cupiditate ab? Dolorem commodi nostrum at, quis nulla minus.</p>
+        <br>
+        <button class="main-btn">Read more</button>
     </div>
-    <div class="other-blogs">
-
+    <div class="main-blog">
+        <img class="main-img" src="favicon.png" alt="">
+        <h1 class="main-h1">This is title of blog</h1>
+        <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint impedit culpa tempora enim earum veniam placeat voluptatem asperiores qui, ipsam corrupti cupiditate ab? Dolorem commodi nostrum at, quis nulla minus.</p>
+        <br>
+        <button class="main-btn">Read more</button>
     </div>
+    <div class="main-blog">
+        <img class="main-img" src="favicon.png" alt="">
+        <h1 class="main-h1">This is title of blog</h1>
+        <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint impedit culpa tempora enim earum veniam placeat voluptatem asperiores qui, ipsam corrupti cupiditate ab? Dolorem commodi nostrum at, quis nulla minus.</p>
+        <br>
+        <button class="main-btn">Read more</button>
+    </div>
+
+    
     <div class="footer">
 
     </div>
